[FIX] web: avoid cropped embedded button in cp on drag
The `o_embedded_actions` buttons are getting cropped when they are long
enough. This is due to the `overflow-hidden` property which is now
applied when no element are actively dragged.

task-5225696

--- a/addons/web/static/src/search/control_panel/control_panel.scss
+++ b/addons/web/static/src/search/control_panel/control_panel.scss
@@ -139,6 +139,10 @@
         background-color: $border-color;
         content: "";
     }
+
+    &:where(:not(:has(.o_dragged_embedded_action))) {
+        overflow: hidden;
+    }
 }
 
 .o_embedded_actions_dropdown_menu {
